...
                Image("SipBuddyLogo")
                    .resizable()
                    .scaledToFit()
                    .frame(width: 240, height: 240)
                    .foregroundColor(.white)
                
                Text("Welcome to")
                    .font(.title2)
                    .foregroundColor(.white.opacity(0.9))
                
                Text("SipBuddy")
                    .font(.system(size: 56, weight: .bold, design: .rounded))
                    .foregroundColor(.white)
...
