...
                }
                .padding(.bottom, 30)
            }
            }
            .navigationBarHidden(true)
            .onAppear {
                PostHogService.shared.screen("Login")
            }
            .toolbar {
                ToolbarItemGroup(placement: .keyboard) {
                    Spacer()
                    Button("Done") {
                        focusedField = nil
...
